[package]
name = "Lightspeed"
version = "0.1.0"
authors = ["xvi <jrip03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "0.3"
config = "0.10.1"
env_logger = "0.7"

derive_more = "0.99.2"
dotenv = "0.15"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.60"

actix-redis = "0.9.1"
